force-app/main/default/objects/MaintenanceAsset/fields/Contract_Manager__c.field-meta.xml
<CustomField>
    <fullName>Contract_Manager__c</fullName>
    <formula>Asset.ATAK_Project__r.Owner:User.FirstName &amp; &quot; &quot; &amp;  Asset.ATAK_Project__r.Owner:User.LastName</formula>
    <label>Contract Manager</label>
    <type>Text</type>
</CustomField>