force-app/main/default/objects/MaintenanceAsset/fields/Default_Duration_in_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Default_Duration_in_Minutes__c</fullName>
    <label>Default Duration in Minutes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>