force-app/main/default/objects/MaintenanceAsset/fields/Total_Minutes_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Total_Minutes_of_Work__c</fullName>
    <formula>Number_of_Work_Orders__c *  Default_Duration_in_Minutes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Minutes of Work</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>